@@ -144,7 +144,7 @@ resolve to either an internal or external reference.
    " ( ( (%body.elements; | topic | sidebar)+,
          (transition, (%body.elements; | topic | sidebar)+ )*,
          ( (%section.elements;), (transition?, (%section.elements;) )* )? )
-     | ( (%section.elements;), (transition?, (%section.elements;) )* ) ) ">
+     | ( (%section.elements;), (transition?, (%section.elements;) )* ) )? ">
 
 <!ENTITY % text.model
   " (#PCDATA | %inline.elements;)* ">
